infrastructure/overlays/server/tls/redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: data
spec:
  redirectScheme:
    scheme: https
    permanent: true
